# burlington-property

./: Cargo.toml  README.md
schemas/: building-infomation-schema.json  parcel-gps-schema.json  property-taxes-schema.json
src/: main.rs
