[package]
name = "burlington-property"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
schemafy = "0.6.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"